[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/interface/menus/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/interface/menus/Options.gd" type="Script" id=2]
[ext_resource path="res://audio/sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://source/interface/button/Button.tscn" type="PackedScene" id=4]

[node name="Options" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="." index="1"]
text = "Options"

[node name="Content" parent="CenterContainer" index="0"]
margin_left = 110.0
margin_top = 49.0
margin_right = 210.0
margin_bottom = 85.0

[node name="Music" type="VBoxContainer" parent="CenterContainer/Content" index="0"]
margin_right = 100.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/Content/Music" index="0"]
stream = ExtResource( 3 )
bus = "Music"

[node name="Label" type="Label" parent="CenterContainer/Content/Music" index="1"]
margin_right = 100.0
margin_bottom = 4.0
text = "Music"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/Content/Music" index="2"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 16.0
min_value = -70.0
max_value = 0.0
step = 5.0

[node name="Effects" type="VBoxContainer" parent="CenterContainer/Content" index="1"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/Content/Effects" index="0"]
stream = ExtResource( 3 )
bus = "Effects"

[node name="Label" type="Label" parent="CenterContainer/Content/Effects" index="1"]
margin_right = 100.0
margin_bottom = 4.0
text = "Effects"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/Content/Effects" index="2"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 16.0
min_value = -70.0
max_value = 0.0
step = 5.0

[node name="Back" parent="BackButton" index="0" instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 100.0
margin_bottom = 22.0

[connection signal="value_changed" from="CenterContainer/Content/Music/HSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Content/Effects/HSlider" to="." method="_on_EffectsHSlider_value_changed"]
[connection signal="pressed" from="BackButton/Back" to="." method="_on_Back_pressed"]
